5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1575_1332.log
== TEST (2019-03-12 11:47:44) 
-- CODE:
aresta =5cm
area =print(3/2(3)**0.5) 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =5cm
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:47:48) 
-- CODE:
aresta =5cm
area =print(3/2(3)**0.5) 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =5cm
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:48:11) 
-- CODE:
aresta =
area =
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:50:41) 
-- CODE:
aresta =
area =
 
print(round(3/2*(3)**0.5*5**2, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:50:45) 
-- CODE:
aresta =
area =
 
print(round(3/2*(3)**0.5*5**2, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:50:46) 
-- CODE:
aresta =
area =
 
print(round(3/2*(3)**0.5*5**2, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:51:28) 
-- CODE:
aresta =
area =
 
print(round(3/2*(3)**0.5, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:54:19) 
-- CODE:
aresta =
area =
 
print(round(3/2, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:54:56) 
-- CODE:
aresta =
area =print(3/2)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:59:23) 
-- CODE:
aresta =print(5)
area =print(3/2*(3)**0.5*5**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:00:23) 
-- CODE:
aresta =print(5)
area =print(3/2*(3)**0.5*5**2)
 
print(round(3/2*(3)**0.5*5**2, 4))
-- OUTPUT:
5
64.9519052838329
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:00:27) 
-- CODE:
aresta =print(5)
area =print(3/2*(3)**0.5*5**2)
 
print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.143634
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5
64.9519052838329
64.9519
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:00:37) 
-- CODE:
aresta =print(5)
area =print(3/2*(3)**0.5*5**2)
 
print(round(3/2*(3)**0.5*5**2, 4))
-- OUTPUT:
5
64.9519052838329
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:00:53) 
-- CODE:
print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.186936
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
